--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>probable-lamp</title>
     <meta charset="utf-8">
     <meta name="keywords" content="probable-lamp, программа, антивирус">
-    <meta name="description" content="Сайт распространения нашей программы антивируса">
+    <meta name="description" content="Just lamp">
     <style>
         * {
             font-size: x-large;
