--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
         .center {
             text-align: center;
             font-size: large;
-            color: rgb(141, 214, 154);
+            color: #6ca877;
         }
     </style>
 </head>
@@ -25,7 +25,17 @@
             <h1>
                 Hey-Hey its not really lamp!
             </h1>
+            <p></p>
+            <h1 style="color: #000">
+                It's just start-page with searching in Google and DuckDuckGo
+            </h1>
         </div>
+        <p></p>
+        <a href="index.html" style="text-decoration: none">
+        <h1 style="text-align: center">
+          Back >
+        </h1>
+      </a>
     </font>
 </body>
 
