--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>probable-lamp</title>
+  <link rel="shortcut icon" href="lamp.jpg" type="image/jpg">
   <style>
     body {
       font-family: Arial, sans-serif;
