--- a/about.html
+++ b/about.html
@@ -31,11 +31,14 @@
             </h1>
         </div>
         <p></p>
+        <a style="text-decoration: none" href="https://github.com/Fynjirby/probable-lamp">
+          <h2 style="color: #b89b0d; text-align: center">Source Code</h2>
+        </a> 
         <a href="index.html" style="text-decoration: none">
-        <h1 style="text-align: center">
+          <h1 style="text-align: center">
           Back >
-        </h1>
-      </a>
+          </h1>
+        </a>
     </font>
 </body>
 
