--- a/index.html
+++ b/index.html
@@ -4,54 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>probable-lamp</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background-color: #ffe0a1;
-    }
-    .footer {
-        font-size: small;
-        line-height: 1.5;
-        margin-left: auto;
-        margin-right: auto;
-        width: 7.5em;
-        position: fixed;
-        left: 0;
-        bottom: 0;
-        width: 100%;
-        background-color: #707070;
-        color: #fff;
-        text-align: center;
-    }
-    .search-engine {
-      display: inline-block;
-      margin: 10px;
-    }
-    .search-engine img {
-      width: 100px;
-      height: 100px;
-    }
-    .search-engine input[type="text"] {
-      width: 300px;
-      padding: 10px;
-      margin-bottom: 10px;
-      border-radius: 10px;
-      font-size: 16px;
-    }
-    .search-engine button {
-      background-color: #4CAF50;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      cursor: pointer;
-      border-radius: 10px;
-      font-size: 16px;
-    }
-    .search-engine button:hover {
-      background-color: #45a049;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <h1 style="color: rgb(171, 81, 255)">probable-lamp</h1>
@@ -67,6 +20,27 @@
       <button type="submit">Search</button>
     </form>
   </div>
+
+  <p class="empty"></p>
+
+  <div class="div-img" align="center">
+    <a href="https://outlook.live.com/mail/0/">
+      <img class="links" src="img/outlook.png" alt="Outlook mail">
+    </a>
+    <a href="https://mail.google.com/mail/u/0/">
+      <img class="links" src="img/gmail.png" alt="Gmail">
+    </a>
+    <a href="https://e.mail.ru/inbox/">
+      <img class="links" src="img/mail.png" alt="Mail.ru">
+    </a>
+    <a href="https://ozon.ru">
+      <img class="links" src="img/ozon.png" alt="Ozon Market">
+    </a>
+    <a href="https://ya.ru">
+      <img class="links" src="img/ya.png" alt="Yandex">
+    </a>
+  </div>
+
   <footer>
       <font face=Arial color="#577bff">
           <div class="footer">
