--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
   <h1 style="color: rgb(171, 81, 255)">probable-lamp</h1>
   <div class="search-engine">
     <form action="https://www.google.com/search" method="get">
+      <img class="search-engine img" src="img/google.png" alt="google logo">
       <input type="text" name="q" placeholder="Search Google">
       <button type="submit">Search</button>
     </form>
   </div>
   <div class="search-engine">
     <form action="https://duckduckgo.com/" method="get">
-      <input type="text" name="q" placeholder="Search DuckDuckGo">
-      <button type="submit">Search</button>
+      <img class="search-engine img" src="img/ddg.png" alt="ddg logo">
+      <input style="border-color: #E37151;" type="text" name="q" placeholder="Search DuckDuckGo">
+      <button style="background-color: #E37151;" type="submit">Search</button>
     </form>
   </div>
 
