addapted for mobile

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1 style="color: rgb(171, 81, 255)">probable-lamp</h1>
+  <h1 style="color: #ab51ff">probable-lamp</h1>
   <div class="search-engine">
     <form action="https://www.google.com/search" method="get">
       <img class="search-engine img" src="img/google.png" alt="google logo">
