small update "before something too big :)"

--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@
     <font face="Arial">
         <div class="center">
             <h1>
-                Hey-Hey its not really lamp!
+                Hey-Hey it's not really lamp!
             </h1>
             <p></p>
             <h1 style="color: #000">
