--- a/index.html
+++ b/index.html
@@ -9,23 +9,25 @@
 </head>
 <body>
   <h1 style="color: #ab51ff">probable-lamp</h1>
-  <div class="search-engine">
-    <form action="https://www.google.com/search" method="get">
-      <a href="https://google.com">
-      <img class="search-engine img" src="img/google.png" alt="google logo">
-      </a>
-      <input type="text" name="q" placeholder="Search Google">
-      <button type="submit">Search</button>
-    </form>
-  </div>
-  <div class="search-engine">
-    <form action="https://duckduckgo.com/" method="get">
-      <a href="https://duckduckgo.com">
-      <img class="search-engine img" src="img/ddg.png" alt="ddg logo">
-      </a>
-      <input style="border-color: #E37151;" type="text" name="q" placeholder="Search DuckDuckGo">
-      <button style="background-color: #E37151;" type="submit">Search</button>
-    </form>
+  <div class="searcher">
+    <div class="search-engine">
+      <form action="https://www.google.com/search" method="get">
+        <a href="https://google.com">
+        <img class="search-engine img" src="img/google.png" alt="google logo">
+        </a>
+        <input type="text" name="q" placeholder="Search Google" autofocus>
+        <button type="submit">Search</button>
+      </form>
+    </div>
+    <div class="search-engine">
+      <form action="https://duckduckgo.com/" method="get">
+        <a href="https://duckduckgo.com">
+        <img class="search-engine img" src="img/ddg.png" alt="ddg logo">
+        </a>
+        <input style="border-color: #E37151;" type="text" name="q" placeholder="Search DuckDuckGo">
+        <button type="submit">Search</button>
+      </form>
+    </div>
   </div>
 
   <p class="empty"></p>
