--- a/about.html
+++ b/about.html
@@ -1,45 +1,31 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <title>About our lamp</title>
     <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
     <style>
-        * {
-            font-size: x-large;
-            font-style: normal;
-            background-color: #ffe0a1;
-        }
-
-        .center {
-            text-align: center;
-            font-size: large;
-            color: #6ca877;
-        }
+      @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
     </style>
+    <link rel="stylesheet" href="about.css">
 </head>
-
 <body>
-    <font face="Arial">
-        <div class="center">
-            <h1>
-                Hey-Hey it's not really lamp!
-            </h1>
-            <p></p>
-            <h1 style="color: #000">
-                It's just start-page with searching in Google and DuckDuckGo
-            </h1>
-        </div>
-        <p></p>
-        <a style="text-decoration: none" href="https://github.com/Fynjirby/probable-lamp">
-          <h2 style="color: #b89b0d; text-align: center">Source Code</h2>
-        </a> 
-        <a href="index.html" style="text-decoration: none">
-          <h1 style="text-align: center">
-          Back >
-          </h1>
-        </a>
-    </font>
-</body>
+    <h1>
+        Hey-Hey it's not really lamp!
+    </h1>
 
+    <h1 class="black">
+        It's just a start-page with easy acsess to searching the internet via Google or DuckDuckGo
+    </h1>
+    
+    <a href="https://github.com/Fynjirby/probable-lamp">
+      <h2 class="scode">Source Code</h2>
+    </a> 
+
+    <a href="index.html">
+      <h1 class="back">Back ></h1>
+    </a>
+</body>
 </html>
