--- a/index.html
+++ b/index.html
@@ -6,10 +6,20 @@
   <meta name="google-site-verification" content="3Nv0GDGVArNy74wj6z41F-5iSFetgmOKM7gnt7qNbo4" />
   <title>probable-lamp</title>
   <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap');
+    @import url('https://fonts.googleapis.com/css2?family=Nerko+One&display=swap');
+  </style>
 </head>
 <body>
-  <h1 style="color: #ab51ff">probable-lamp</h1>
-  <div class="searcher">
+  <h1 class="logo">probable-lamp</h1>
+  <div class="search">
     <div class="search-engine">
       <form action="https://www.google.com/search" method="get">
         <a href="https://google.com">
@@ -33,30 +43,35 @@
   <p class="empty"></p>
 
   <div class="div-img" align="center">
+    <h1 style="color: #33A852;">Links</h1>
+
     <a href="https://outlook.live.com/mail/0/">
       <img class="links" src="img/outlook.png" alt="Outlook mail">
     </a>
+
     <a href="https://mail.google.com/mail/u/0/">
       <img class="links" src="img/gmail.png" alt="Gmail">
     </a>
+
     <a href="https://e.mail.ru/inbox/">
       <img class="links" src="img/mail.png" alt="Mail.ru">
     </a>
+
     <a href="https://ozon.ru">
       <img class="links" src="img/ozon.png" alt="Ozon Market">
     </a>
+
     <a href="https://ya.ru">
       <img class="links" src="img/ya.png" alt="Yandex">
     </a>
+
   </div>
 
   <footer>
-      <font face=Arial color="#577bff">
           <div class="footer">
               <a href="about.html"
-                  style="text-decoration: none; background-color: #707070; color: #fff; padding-left: 0px; font-size: larger;">About our lamp</a>
+                  style="text-decoration: none; background-color: #707070; color: #fff; padding-left: 0px; font-size: larger;">By Fynjirby</a>
           </div>
-      </font>
   </footer>
 </body>
 </html>
