adopted for mobile devices

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
   </style>
 </head>
 <body>
-  <h1 class="logo">probable-lamp</h1>
+  <a href="index.html">
+    <h1 class="logo">probable-lamp</h1>
+  </a>
   <div class="search">
     <div class="search-engine">
       <form action="https://www.google.com/search" method="get">
@@ -43,7 +45,7 @@
   <p class="empty"></p>
 
   <div class="div-img" align="center">
-    <h1 style="color: #33A852;">Links</h1>
+    <h1 class="links-text">Links</h1>
 
     <a href="https://outlook.live.com/mail/0/">
       <img class="links" src="img/outlook.png" alt="Outlook mail">
