about page is now adopted for mobile phones

--- a/about.html
+++ b/about.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About our lamp</title>
     <meta charset="utf-8">
+    <title>about lamp</title>
+    <link rel="icon" href="img/logo.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nerko+One&display=swap" rel="stylesheet">
@@ -12,14 +13,20 @@
     <link rel="stylesheet" href="about.css">
 </head>
 <body>
-    <h1>
+    <h1 class="green">
         Hey-Hey it's not really lamp!
     </h1>
 
     <h1 class="black">
         It's just a start-page with easy acsess to searching the internet via Google or DuckDuckGo
     </h1>
-    
+
+    <br>
+
+    <div class="inline">
+      <a href="https://probable-lamp.netlify.app"><h1 class="mirror">1st mirror </h1></a><h1 class="separator"> | </h1><a href="https://fynjirby.github.io/probable-lamp"><h1 class="mirror">2nd mirror</h1></a>
+    </div>
+
     <a href="https://github.com/Fynjirby/probable-lamp">
       <h2 class="scode">Source Code</h2>
     </a> 
