--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     </a> 
 
     <a href="index.html">
-      <h1 class="back">Back ></h1>
+      <h1 class="backhome">< Back home</h1>
     </a>
 </body>
 </html>
