--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     </div>
   </div>
 
-  <p class="empty"></p>
-
   <div class="div-img" align="center">
     <h1 class="links-text">Links</h1>
+
+    <a href="https://app.tuta.com/mail">
+      <img class="links" src="img/tuta.png" alt="Tutanota mail">
+    </a>
 
     <a href="https://outlook.live.com/mail/0/">
       <img class="links" src="img/outlook.png" alt="Outlook mail">
@@ -70,10 +72,12 @@
 
   </div>
 
+<!-- <a href="incognito.html"><h1 class="incognito">Incognito search</h1></a> -->
+
   <footer>
           <div class="footer">
               <a href="about.html"
-                  style="text-decoration: none; background-color: #707070; color: #fff; padding-left: 0px; font-size: larger;">By Fynjirby</a>
+                  style="text-decoration: none; color: #efefef; padding-left: 0px; font-size: larger;">By Fynjirby</a>
           </div>
   </footer>
 </body>
